--- a/src/stories/color.mdx
+++ b/src/stories/color.mdx
@@ -9,5 +9,6 @@ export const colors = tailwindConfig.theme.colors;
     <ColorItem title='main' colors={{ main: colors.main }} />
     <ColorItem title='light_theme' colors={ colors.light } />
     <ColorItem title='dark_theme' colors={ colors.dark } />
+    <ColorItem title='link' colors={{ link: colors.link }} />
     <ColorItem title='other' colors={{ danger: colors.danger }} />
 </ColorPalette>
